fix spacing for breakpoints

--- a/scss/_defaults.scss
+++ b/scss/_defaults.scss
@@ -1,5 +1,6 @@
 // Spacing
 $spacer: 10px !default;
+$max-spacing-multiplier: 30 !default;
 
 // Buttons
 $btn-font: inherit !default;
